<resources>
    <string name="app_name">AVANTO</string>

    <!-- Sign In -->
    <string name="signin">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password</string>
    <string name="no_account">No account? Sign Up</string>

    <!-- Sign -->
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- Sign Up -->
    <string name="signup">Sign Up</string>
    <string name="username">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="have_an_account">Have an account? Sign In</string>

    <!-- Home -->
    <string name="home">Home</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="favorite">Favorite</string>

    <!-- User -->
    <string name="profile">Profile</string>
    <string name="pr_user">User:</string>
    <string name="pr_email">Email:</string>
    <string name="pr_phone_number">Phone number:</string>
    <string name="about_theapp">About the app</string>
    <string name="signout">Sign Out</string>

    <!-- Forgot Password -->
    <string name="enter_email">Enter your Email</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>


    <string name="text_wth_bullets">\u2022</string>
    <string name="size_in_b">%1$.2f B</string>
    <string name="size_in_kb">%1$.2f KB</string>
    <string name="size_in_mb">%1$.2f MB</string>
    <string name="size_in_gb">%1$.2f GB</string>

    <string name="long_text">Hello everyone! It\'s me Amir Makhmudov! And Today I will try to defend my project!</string>
    <string name="audio_sub">Audio &amp; Subtitle </string>
    <string name="lock">Lock</string>
    <string name="speed_1x">Speed(1x)</string>
    <string name="rotate">Rotate</string>
    <string name="tap_to_unlock">Tap to Unlock</string>
    <string name="screen_locked">Screen Locked</string>
    <string name="unlock_controls">Unlock Controls?</string>
    <string name="folder_name">Folder Name</string>
    <string name="_10_videos">10 videos</string>
    <string name="_1_00gb">1.00Gb</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="search">Search file name</string>


    <string name="open">open</string>
    <string name="close">close</string>
    <string name="about_us">About us</string>
    <string name="version">Version</string>
    <string name="_1_0_1">1.0.1</string>
    <string name="direct_n_app">Direct\nApp</string>
    <string name="app_n_link">App\nLink</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="title">Name:</string>
    <string name="path">Path:</string>
    <string name="size">Size:</string>
    <string name="duration">Duration:</string>
    <string name="resolution">Resolution:</string>

</resources>