<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".ui.fragment.UserFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/profile"
        android:textSize="32sp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/defaultuserpic"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/user_titleUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pr_user"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_textUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_titleUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/pr_email"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_titleUserName" />

        <TextView
            android:id="@+id/user_textUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_titleUserEmail" />

        <TextView
            android:id="@+id/user_titleUserPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/pr_phone_number"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_titleUserEmail" />

        <TextView
            android:id="@+id/user_textUserPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_titleUserPhone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/user_buttonAppInfo"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"

        android:backgroundTint="@color/app_foreground"
        android:text="@string/about_theapp"
        app:cornerRadius="15dp"/>

    <Button
        android:id="@+id/user_buttonUserSignOut"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"

        android:text="@string/signout"
        app:cornerRadius="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</LinearLayout>